syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.leaf.common.grpc";
option java_outer_classname = "CommonProto";

message SearchRequest {
    string searchText = 1;
    int32 page = 2;
    int32 size = 3;
    string sortOrder = 4;
    string sortField = 5;
}

message PageResponse {  
    int32 currentPage = 1;
    int32 size = 2;
    int64 total = 3;
    int32 totalPages = 4;
    int32 count = 5;
}

enum Gender {
    GENDER_UNSPECIFIED = 0;
    GENDER_MALE = 1;
    GENDER_FEMALE = 2;
    GENDER_OTHER = 3;
}

enum PrivacyLevel {
    PRIVACY_LEVEL_UNSPECIFIED = 0;
    PRIVACY_LEVEL_PUBLIC = 1;
    PRIVACY_LEVEL_PRIVATE = 2;
    PRIVACY_LEVEL_CUSTOM = 3;
    PRIVACY_LEVEL_FRIENDS_ONLY = 4;
}

enum RelationshipStatus {
    RELATIONSHIP_STATUS_UNSPECIFIED = 0; // Mặc định
    RELATIONSHIP_STATUS_SINGLE = 1;
    RELATIONSHIP_STATUS_IN_A_RELATIONSHIP = 2;
    RELATIONSHIP_STATUS_ENGAGED = 3;
    RELATIONSHIP_STATUS_MARRIED = 4;
    RELATIONSHIP_STATUS_ITS_COMPLICATED = 5;      // Đã bỏ dấu ' và viết hoa
    RELATIONSHIP_STATUS_IN_LOVE = 6;              // "Đang yêu"
    RELATIONSHIP_STATUS_WIDOWED = 7;              // Góa
    RELATIONSHIP_STATUS_SEPARATED = 8;            // Ly thân
    RELATIONSHIP_STATUS_DIVORCED = 9;             // Ly hôn
    RELATIONSHIP_STATUS_HIDDEN = 10;
    RELATIONSHIP_STATUS_CIVIL_PARTNERSHIP = 11;
}
